src/test/deca/context/invalid/homemade/tests/test342_new_no_class_int_int.deca
// test invalide de la règle 3.42



class int {
    int x;
}

{
    
    int a = new int();
}